[metadata]
name = multi_mst
version = 0.1.0
author = Jelmer Bot
author_email = jelmer.bot@uhasselt.be
maintainer = Jelmer Bot
maintainer_email = jelmer.bot@uhasselt.be
description = Minimum spanning tree based manifold approximations.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = minimum spanning tree, dimensionality reduction
url = https://github.com/vda-lab/multi_mst
license = BSD 2-Clause License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = 
    multi_mst
    multi_mst.k_mst
    multi_mst.noisy_mst
    multi_mst.tests
python_requires = >=3.9
install_requires =
    numpy>=1.21
    numba>=0.56
    umap-learn>=0.5.4
    scikit-learn>=1.1
